<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_text" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port_text"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <EditText
            android:id="@+id/tfPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="8080" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <Button
            android:id="@+id/btnServerConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_connect_text" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_connection_text" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/tfDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/list_device" >
        </Spinner>

        <Button
            android:id="@+id/btnDeviceConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_connect_text" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/device_id_text"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <Spinner
            android:id="@+id/tfDeviceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/list_deviceID" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/btnSendOFF"
            android:layout_width="100px"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="@string/device_off_text" >
        </Button>

        <Button
            android:id="@+id/btnSendON"
            android:layout_width="100px"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="@string/device_on_text" >
        </Button>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ClearConsole"
            android:text="@string/console_clear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.10"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/tfConsole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.84"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

</LinearLayout>
